--- a/loja.back/src/services/Loja.Back.Identidade.Api/appsettings.json
+++ b/loja.back/src/services/Loja.Back.Identidade.Api/appsettings.json
@@ -9,5 +9,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "AppSettings": {
+    "Secret": "sk*@UFchxg#mXBmePhVKVT$y",
+    "ExpiracaoHoras": 2,
+    "Emissor": "LojaOnline",
+    "ValidoEm": "https://localhost"
+  },
   "AllowedHosts": "*"
 }
