--- a/loja.back/src/services/Loja.Back.Identidade.Api/Loja.Back.Identidade.Api.csproj
+++ b/loja.back/src/services/Loja.Back.Identidade.Api/Loja.Back.Identidade.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -27,7 +27,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Configuration\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
