--- a/loja.back/src/services/Loja.Back.Catalogo.Api/Loja.Back.Catalogo.Api.csproj
+++ b/loja.back/src/services/Loja.Back.Catalogo.Api/Loja.Back.Catalogo.Api.csproj
@@ -12,6 +12,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Controllers\" />
+    <Folder Include="Models\" />
+    <Folder Include="Data\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
