--- a/loja.back/src/services/Loja.Back.Cliente.Api/Loja.Back.Clientes.Api.csproj
+++ b/loja.back/src/services/Loja.Back.Cliente.Api/Loja.Back.Clientes.Api.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.13" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="5.0.13" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.13">
@@ -21,9 +22,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Application\Events\" />
+    <Folder Include="Application\Queries\" />
     <Folder Include="Controllers\" />
-    <Folder Include="Application\" />
-    <Folder Include="Data\Repository\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
