--- a/loja.front/loja-front/package.json
+++ b/loja.front/loja-front/package.json
@@ -16,7 +16,9 @@
     "@types/react-router-dom": "^5.3.2",
     "@types/styled-components": "^5.1.17",
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
+    "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
