--- a/loja.back/src/web/Loja.Back.MVC/appsettings.Development.json
+++ b/loja.back/src/web/Loja.Back.MVC/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "AutenticacaoUrl": "https://localhost:44396",
+  "CatalogoUrl": "https://localhost:44307",
+  "CarrinhoUrl": "https://localhost:44388",
+
   "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
