terminando o processo de carrinho

--- a/loja.back/src/services/Loja.Back.Carrinho.Api/Loja.Back.Carrinho.Api.csproj
+++ b/loja.back/src/services/Loja.Back.Carrinho.Api/Loja.Back.Carrinho.Api.csproj
@@ -25,6 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\building blocks\Loja.Back.Core\Loja.Back.Core.csproj" />
     <ProjectReference Include="..\..\building blocks\Loja.Back.WebAPI.Core\Loja.Back.WebAPI.Core.csproj" />
   </ItemGroup>
 
