--- a/loja.front/loja-front/package.json
+++ b/loja.front/loja-front/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
+    "immer": "^9.0.12",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -53,5 +54,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "file-loader": "^6.2.0",
+    "url-loader": "^4.1.1"
   }
 }
