--- a/loja.front/loja-front/package.json
+++ b/loja.front/loja-front/package.json
@@ -23,6 +23,7 @@
     "immer": "^9.0.12",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
