--- a/loja.back/src/api gateways/Loja.Back.Bff.Compras/Loja.Back.Bff.Compras.csproj
+++ b/loja.back/src/api gateways/Loja.Back.Bff.Compras/Loja.Back.Bff.Compras.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.11.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="5.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
