--- a/loja.back/src/api gateways/Loja.Back.Bff.Compras/Properties/launchSettings.json
+++ b/loja.back/src/api gateways/Loja.Back.Bff.Compras/Properties/launchSettings.json
@@ -43,6 +43,13 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "https://localhost:5001;https://localhost:5000"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
+      "publishAllPorts": true,
+      "useSSL": true
     }
   }
 }
