--- a/loja.back/src/building blocks/Loja.Back.WebAPI.Core/Loja.Back.WebAPI.Core.csproj
+++ b/loja.back/src/building blocks/Loja.Back.WebAPI.Core/Loja.Back.WebAPI.Core.csproj
@@ -7,6 +7,11 @@
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="10.3.6" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.13" />
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="5.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Loja.Back.Core\Loja.Back.Core.csproj" />
   </ItemGroup>
 
 </Project>
