--- a/loja.back/src/building blocks/Loja.Back.Core/Loja.Back.Core.csproj
+++ b/loja.back/src/building blocks/Loja.Back.Core/Loja.Back.Core.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="FluentValidation" Version="10.3.6" />
     <PackageReference Include="MediatR" Version="9.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
+    <PackageReference Include="NetDevPack" Version="5.3.2" />
   </ItemGroup>
 
 </Project>
